- Addition of the changeFDR() utility function that allows the re-thresholding of a "CpGannotated" object without fitting the entire model again
- Simplification of the rmSNPandCH() function
- Overlapping.promoters in extractRanges() are now overlapping.genes
- All vignette examples use ExperimentHub data
- Removal of the "p.adjust.method" argument to dmrcate() - it is confusing since thresholding should be performed at the (cpg|sequencing).annotate level
- Removal of the "samps" argument to DMR.plot() - it is redundant and usage can be specified by subsetting "CpGs" and "phen.col"
- Multicore processing removed since WGBS DMRs should be able to be produced in serial in < 1 hour


CHANGES IN DMRcate VERSION 1.12.1
- Peak closing sped up with Segment.R

CHANGES IN DMRcate VERSION 1.10.2
- Bugfix for when there are no significant CpG sites at the given threshold

CHANGES IN DMRcate VERSION 1.10.1

- Data filtering for EPIC arrays now incorporates probe information (via DMRcatedata_1.8.3) from Pidsley and Zotenko et al. (2016) Genome Biology 17(1), 208.
- Two new modules are now available in cpg.annotate() in addition to "differential" and "variability": "ANOVA" and "diffVar". "ANOVA" will find whole-experiment DMRs from the entire set of contrasts in the design matrix; "diffVar" finds differentially variable regions (DVMRs) using functionality from the missMethyl package.
- Class GenomicRatioSet (minfi) can now be passed to cpg.annotate().

CHANGES IN DMRcate VERSION 1.8.5

- DMRs can now be called from Illumina's EPIC array. Workflow is identical to that of 450K, just with a different annotation argument to cpg.annotate() and DMR.plot().

CHANGES IN DMRcate VERSION 1.7.2

- Major changes. WGBS pipeline is now implemented with DSS as a regression step instead of limma. 450K pipeline is the same, but with slight cosmetic changes in anticipation of the transition to the EPIC array.