@@ -10,10 +10,10 @@ Authors@R: c(person("Tim", "Peters", role = c("cre", "aut"),
              person("Aaron", "Statham", role = "ctb"),
              person("Tim", "Triche, Jr.", role = "ctb"))
 Description: De novo identification and extraction of differentially methylated regions (DMRs) from the human genome using Whole Genome Bisulfite Sequencing (WGBS) and Illumina Infinium Array (450K and EPIC) data. Provides functionality for filtering probes possibly confounded by SNPs and cross-hybridisation. Includes GRanges generation and plotting functions.
-Depends: R (>= 3.6.0), minfi, DMRcatedata, SummarizedExperiment
-Imports: bsseq, GenomeInfoDb, limma, edgeR, DSS, missMethyl, GenomicRanges, methods, graphics, plyr, Gviz, IRanges, stats, utils, S4Vectors
+Depends: R (>= 3.6.0), minfi, SummarizedExperiment
+Imports: ExperimentHub, bsseq, GenomeInfoDb, limma, edgeR, DSS, missMethyl, GenomicRanges, methods, graphics, plyr, Gviz, IRanges, stats, utils, S4Vectors
 biocViews: DifferentialMethylation, GeneExpression, Microarray, MethylationArray, Genetics, DifferentialExpression, GenomeAnnotation, DNAMethylation, OneChannel, TwoChannel, MultipleComparison, QualityControl, TimeCourse, Sequencing, WholeGenome, Epigenetics, Coverage, Preprocessing, DataImport
-Suggests: knitr, RUnit, BiocGenerics, ExperimentHub, IlluminaHumanMethylation450kanno.ilmn12.hg19, IlluminaHumanMethylationEPICanno.ilm10b4.hg19
+Suggests: knitr, RUnit, BiocGenerics, IlluminaHumanMethylation450kanno.ilmn12.hg19, IlluminaHumanMethylationEPICanno.ilm10b4.hg19
 License: file LICENSE
 VignetteBuilder: knitr
 
