@@ -1,7 +1,6 @@
 exportPattern("^[[:alpha:]]+")
 import(methods)
 import(limma)
-import(DMRcatedata)
 import(Gviz)
 import(GenomicRanges)
 import(GenomeInfoDb)
@@ -11,6 +10,7 @@ import(DSS)
 import(IRanges)
 import(missMethyl)
 import(SummarizedExperiment)
+import(ExperimentHub)
 importFrom("plyr", rbind.fill)
 importFrom("graphics", plot)
 importFrom("S4Vectors", subjectHits)
