@@ -1,7 +1,7 @@
 DMR.plot <- function (ranges, dmr, CpGs, what = c("Beta", "M"), arraytype = c("EPIC", 
                                                                   "450K"), phen.col, genome = c("hg19", "hg38", "mm10"), ...) 
 {
-  env <- new.env(parent = emptyenv())
+  eh = ExperimentHub()
   what <- match.arg(what)
   arraytype <- match.arg(arraytype)
   genome <- match.arg(genome)
@@ -71,14 +71,11 @@ DMR.plot <- function (ranges, dmr, CpGs, what = c("Beta", "M"), arraytype = c("E
                                          col = phen.col[sort(group)], 
                                          ylim = c(0, 1), name = "Smoothed\n group means", na.rm=TRUE)))
   switch(genome, hg19 = {
-    data(hg19.grt, envir = env);
-    grt = env$hg19.grt
+    grt = eh[["EH3133"]]
   }, hg38 = {
-    data(hg38.grt, envir = env);
-    grt = env$hg38.grt
+    grt = eh[["EH3135"]]
   }, mm10 = {
-    data(mm10.grt, envir = env);
-    grt = env$mm10.grt
+    grt = eh[["EH3137"]]
   })
   chromosome(grt) <- as.character(seqnames(methRatios)[1])
   extras <- list(AnnotationTrack(dmrs.inplot, name = "DMRs", 
