@@ -1,6 +1,5 @@
 extractRanges <-function(dmrcoutput, genome=c("hg19", "hg38", "mm10"))
 {
-  env <- new.env(parent=emptyenv())
   genome <- match.arg(genome)
   if(!is(dmrcoutput, "DMResults")){
     stop("Error: dmrcoutput is not a DMResults object. Please create one with dmrcate().")
@@ -11,13 +10,11 @@ extractRanges <-function(dmrcoutput, genome=c("hg19", "hg38", "mm10"))
   coords$chromStart <- as.integer(as.character(coords$chromStart))
   coords$chromEnd <- as.integer(as.character(coords$chromEnd))
   ranges <- makeGRangesFromDataFrame(coords, keep.extra.columns = TRUE)
+  eh = ExperimentHub()
   switch(genome,
-    hg19={data(hg19.generanges, envir=env);
-          grt=env$hg19.generanges},
-    hg38={data(hg38.generanges, envir=env);
-          grt=env$hg38.generanges},
-    mm10={data(mm10.generanges, envir=env);
-          grt=env$mm10.generanges}
+    hg19={grt=eh[["EH3132"]]},
+    hg38={grt=eh[["EH3134"]]},
+    mm10={grt=eh[["EH3136"]]}
   )
   genesidx <- as.data.frame(findOverlaps(ranges, grt))
   genesover <- tapply(genesidx$subjectHits, genesidx$queryHits, function(x) grt$symbol[x])
